# pypi-examiner

./: MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml  live.yml
pypi_examiner/: __init__.py  client.py
tests/: maintained_by.py  who_maintains.py  who_owns.py
