[options]
install_requires = 
    requests
    beautifulsoup4

[metadata]
name = pypi-examiner
version = 0.2
description = A simple client to fetch the few things PyPI does not expose via API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chris.partridge.tech/
author = Chris Partridge
author_email = tweedge-public@partridge.tech
license = Apache License 2.0
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Source = https://github.com/tweedge/pypi-examiner